package clases;

public class Capitan {
    //atributos
    private String nombre;
    private String apellido;
    private String matriculaNavegacion;
}
