@startuml
'https://plantuml.com/class-diagram

abstract class Embarcacion{
-capitan:Capitan
-precioBase: int
-valorAdiconal: int
-eslora: double
+calcularMontoAlquiler(): int
}

class Capitan{
-nombre:String
-apellido: String
-matriculaNavegacion: String
+Capitan(String nombre, String apellido, String matriculaNavegacion)
}

class Velero{
-cantidadMastiles: int
+ esGrande(): boolean
}

class Yate{
-cantidadCamarotes
+compareTo(o Objeto)
}
Yate -u-|> Embarcacion
Velero -u-|> Embarcacion
Capitan -r-> Embarcacion
@enduml